changed styling on main container to flexbox with no wrap. This solves the issue of defining the height of the rows in css

--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,17 @@ body {
 .container {
     height:100vh;
     width:100vw;
+    display:flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 
 .row-container {
-    height:6.25vh;
+    height:100%;
     width:100%;
     background-color: blue;
     display:flex;
-    border:1px solid black;
+    flex-wrap: nowrap;
 }
 
 .block {
